--- a/MyHomeApp/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/MyHomeApp/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -68,6 +68,12 @@
               </a>
             </li>
             <li>
+              <a class="dropdown-item" routerLink="admin/organization-management" routerLinkActive="active" (click)="collapseNavbar()">
+                <fa-icon icon="users" [fixedWidth]="true"></fa-icon>
+                <span jhiTranslate="global.menu.admin.organizationManagement">Gestión de organizaciones</span>
+              </a>
+            </li>
+            <li>
               <a class="dropdown-item" routerLink="admin/metrics" routerLinkActive="active" (click)="collapseNavbar()">
                 <fa-icon icon="tachometer-alt" [fixedWidth]="true"></fa-icon>
                 <span jhiTranslate="global.menu.admin.metrics">Métricas</span>
