--- a/MyHomeApp/src/main/webapp/app/admin/organization-management/delete/delete-organization.component.html
+++ b/MyHomeApp/src/main/webapp/app/admin/organization-management/delete/delete-organization.component.html
@@ -1,1 +1,25 @@
-<p>delete-organization works!</p>
+<form *ngIf="organization" name="deleteForm" (ngSubmit)="confirmDelete(organization.id!)">
+    <div class="modal-header">
+      <h4 class="modal-title" jhiTranslate="entity.delete.title">Confirmar operación de borrado</h4>
+  
+      <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true" (click)="cancel()">&times;</button>
+    </div>
+  
+    <div class="modal-body">
+      <jhi-alert-error></jhi-alert-error>
+  
+      <p jhiTranslate="organizations.delete.question" [translateValues]="{ name: organization.name }">
+        ¿Seguro que quieres eliminar la organización {{ organization.name }}?
+      </p>
+    </div>
+  
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="cancel()">
+        <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancelar</span>
+      </button>
+  
+      <button type="submit" class="btn btn-danger">
+        <fa-icon icon="times"></fa-icon>&nbsp;<span jhiTranslate="entity.action.delete">Eliminar</span>
+      </button>
+    </div>
+  </form>
