--- a/MyHomeApp/src/main/webapp/app/incidences/detail/detail-incidence.component.html
+++ b/MyHomeApp/src/main/webapp/app/incidences/detail/detail-incidence.component.html
@@ -1,1 +1,47 @@
-<p>detail-incidence works!</p>
+<div class="d-flex justify-content-center">
+    <div class="col-8">
+      <div *ngIf="incidence">
+        <h2>
+          <span jhiTranslate="incidences.detail.title_view">Incidencia</span> [<strong>{{ incidence.title }}</strong>]
+        </h2>
+  
+        <dl class="row-md jh-entity-details">
+          
+          <dt><span jhiTranslate="incidences.detail.title">Título</span></dt>
+          <dd>{{ incidence.title }}</dd>
+  
+          <dt><span jhiTranslate="incidences.detail.description">description</span></dt>
+          <dd>{{ incidence.description }}</dd>
+
+          <dt><span jhiTranslate="incidences.detail.start_date">Fecha inicio</span></dt>
+          <dd>{{ incidence.startDate | date: 'dd/MM/yy HH:mm' }}</dd>
+
+          <dt><span jhiTranslate="incidences.detail.end_date">Fecha resolución</span></dt>
+          <dd>{{ incidence.endDate | date: 'dd/MM/yy HH:mm' }}</dd>
+  
+          <dt><span jhiTranslate="incidences.detail.type">type</span></dt>
+          <dd>{{ (''incidences.status.status_incidence.' + incidence.status) | lowercase | translate }}</dd>
+  
+          <dt><span jhiTranslate="incidences.detail.geolocation">Geolocalización</span></dt>
+          <dd>[{{ incidence.location?.latitude }} , {{ incidence.location?.longitude }}]</dd>
+  
+          <dt><span jhiTranslate="incidences.detail.createdBy">Creado por</span></dt>
+          <dd>{{ incidence.createdBy }}</dd>
+  
+          <dt><span jhiTranslate="incidences.detail.createdDate">Fecha de creación</span></dt>
+          <dd>{{ incidence.createdDate | date: 'dd/MM/yy HH:mm' }}</dd>
+  
+          <dt><span jhiTranslate="incidences.detail.lastModifiedBy">Modificado por</span></dt>
+          <dd>{{ incidence.lastModifiedBy }}</dd>
+  
+          <dt><span jhiTranslate="incidences.detail.lastModifiedDate">Fecha de modificación</span></dt>
+          <dd>{{ incidence.lastModifiedDate | date: 'dd/MM/yy HH:mm' }}</dd>  
+
+        </dl>
+  
+        <button type="submit" routerLink="../../" class="btn btn-info">
+          <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Volver</span>
+        </button>
+      </div>
+    </div>
+  </div>
