--- a/MyHomeApp/src/main/webapp/content/scss/global.scss
+++ b/MyHomeApp/src/main/webapp/content/scss/global.scss
@@ -2,7 +2,7 @@
 @import '~bootstrap/scss/functions';
 @import '~bootswatch/dist/zephyr/variables';
 @import '~bootstrap/scss/variables';
-
+@import '~bootstrap-icons/font/bootstrap-icons';
 /* ==============================================================
 Bootstrap tweaks
 ===============================================================*/
