--- a/MyHomeApp/src/main/webapp/app/incidences/status/status-incidence.component.html
+++ b/MyHomeApp/src/main/webapp/app/incidences/status/status-incidence.component.html
@@ -29,8 +29,9 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col">
+<div class="d-flex flex-column flex-sm-column flex-md-column flex-lg-column flex-xl-column flex-xxl-row">
+
+  <div class=""> <!--col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-3 col-xxl-4-->
     <div class="task-kanban-container accordion" id="accordionExample">
 
       <div class="accordion-item card bg-gray-300 shadow-none rounded-3 d-inline-block me-4 align-top mb-4 task-card">
@@ -38,11 +39,9 @@
         <div class="card-body p-3">
   
           <div class="task-list">
-  
-            <!--Head-->
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <div>
-                    <fa-icon icon="table-list" class="icon-pending"></fa-icon> <span >{{statusType[0]}}</span><!--jhiTranslate=""-->
+                    <fa-icon icon="table-list" class="icon-pending"></fa-icon> <span >{{statusType[0]}}</span>
                 </div>
                 <div class="d-flex align-items-center">
                   <div class="dropdown" ngbDropdown>
@@ -59,23 +58,11 @@
                   </div>
                 </div>
             </div>
-  
-            <!--Body-->
 
             <div class="task-kanban" >
                 <div id="do">
-                  <!-- Elemento a repetir-->
-                  <!--*ngFor="let element of toDo"-->
-
-                  <!--
-                    border-pending
-                    border-in-progress
-                    border-resolved
-                  -->
                   <ng-container *ngFor="let incidence of incidencesPending" >
-                    <!-- card -->
                     <div  class="card border-pending" >
-                      <!-- card body -->
                       <div class="card-body p-3">
                         <div class="d-flex justify-content-between">
                           <div>
@@ -84,7 +71,6 @@
                           <div><span class="badge bg-danger">{{incidence.priority}}</span></div> 
                         </div>
                         <div class="d-flex justify-content-between align-items-center ps-4 mt-6">
-                          <!-- img -->
                           <div class="d-flex align-items-center">
                           </div>                                  
                         </div>
@@ -94,9 +80,7 @@
                 </div>
             </div>
   
-            <!-- Footer -->
             <div class="mt-3">
-                <!-- button -->
                 <div class="d-grid">
                   <div class="d-grid">
                     <button type="button" class="btn btn-light-secondary btn-sm rounded-3" data-bs-toggle="modal" data-bs-target="#taskModal">
@@ -113,7 +97,7 @@
     </div>
     </div>
   </div>
-  <div class="col">
+  <div class="">
     <div class="task-kanban-container">
       <div class="card bg-gray-300 shadow-none rounded-3 d-inline-block me-4 align-top mb-4 task-card">
   
@@ -121,10 +105,9 @@
   
           <div class="task-list">
   
-           <!--Head-->
            <div class="d-flex justify-content-between align-items-center mb-3">
               <div>
-                <fa-icon icon="spinner" class="icon-in-progress" ></fa-icon> <span >{{statusType[1]}}</span><!--jhiTranslate=""-->
+                <fa-icon icon="spinner" class="icon-in-progress" ></fa-icon> <span >{{statusType[1]}}</span>
               </div>
               <div class="d-flex align-items-center">
                 <div class="dropdown" ngbDropdown>
@@ -141,23 +124,10 @@
                 </div>
               </div>
           </div>
-
-          <!--Body-->
-
           <div class="task-kanban" >
               <div id="do">
-                <!-- Elemento a repetir-->
-                <!--*ngFor="let element of toDo"-->
-
-                <!--
-                  border-pending
-                  border-in-progress
-                  border-resolved
-                -->
                 <ng-container *ngFor="let incidence of incidencesInProgress" >
-                  <!-- card -->
                   <div  class="card border-in-progress" >
-                    <!-- card body -->
                     <div class="card-body p-3">
                       <div class="d-flex justify-content-between">
                         <div>
@@ -166,7 +136,6 @@
                         <div><span class="badge bg-warning">{{incidence.priority}}</span></div> 
                       </div>
                       <div class="d-flex justify-content-between align-items-center ps-4 mt-6">
-                        <!-- img -->
                         <div class="d-flex align-items-center">
                         </div>                                  
                       </div>
@@ -183,7 +152,7 @@
       </div>
     </div>
   </div>
-  <div class="col">
+  <div class="">
     <div class="task-kanban-container">
       <div class="card bg-gray-300 shadow-none rounded-3 d-inline-block me-4 align-top mb-4 task-card">
   
@@ -191,10 +160,9 @@
   
           <div class="task-list">
   
-            <!--Head-->
             <div class="d-flex justify-content-between align-items-center mb-3">
               <div>
-                <fa-icon icon="user-clock" class="icon-pending-confirm"></fa-icon> <span >{{statusType[2]}}</span><!--jhiTranslate=""-->
+                <fa-icon icon="user-clock" class="icon-pending-confirm"></fa-icon> <span >{{statusType[2]}}</span>
               </div>
               <div class="d-flex align-items-center">
                 <div class="dropdown" ngbDropdown>
@@ -211,24 +179,11 @@
                 </div>
               </div>
             </div>
-
-            <!--Body-->
-
             <div class="task-kanban">
                 <div id="do">
 
-                  <!-- Elemento a repetir-->
-                  <!--*ngFor="let element of toDo"-->
-
-                  <!--
-                    border-pending
-                    border-in-progress
-                    border-resolved
-                  -->
                   <ng-container *ngFor="let incidence of incidencesPendingConfirm" >
-                    <!-- card -->
                     <div  class="card border-pending-confirm" >
-                      <!-- card body -->
                       <div class="card-body p-3">
                         <div class="d-flex justify-content-between">
                           <div>
@@ -237,7 +192,6 @@
                           <div><span class="badge bg-warning">{{incidence.priority}}</span></div> 
                         </div>
                         <div class="d-flex justify-content-between align-items-center ps-4 mt-6">
-                          <!-- img -->
                           <div class="d-flex align-items-center">
                           </div>                                  
                         </div>
@@ -251,7 +205,7 @@
       </div>
     </div>
   </div>
-  <div class="col">
+  <div class="">
     <div class="task-kanban-container">
       <div class="card bg-gray-300 shadow-none rounded-3 d-inline-block me-4 align-top mb-4 task-card">
   
@@ -259,10 +213,9 @@
   
           <div class="task-list">
   
-              <!--Head-->
               <div class="d-flex justify-content-between align-items-center mb-3">
                   <div>
-                    <fa-icon icon="check" class="icon-resolved"></fa-icon> <span >{{statusType[3]}}</span><!--jhiTranslate=""-->
+                    <fa-icon icon="check" class="icon-resolved"></fa-icon> <span >{{statusType[3]}}</span>
                   </div>
                   <div class="d-flex align-items-center">
                     <div class="dropdown" ngbDropdown>
@@ -278,23 +231,11 @@
                   </div>
               </div>
   
-              <!--Body-->
   
               <div class="task-kanban">
                   <div id="do">
-  
-                    <!-- Elemento a repetir-->
-                    <!--*ngFor="let element of toDo"-->
-
-                    <!--
-                      border-pending
-                      border-in-progress
-                      border-resolved
-                    -->
                     <ng-container *ngFor="let incidence of incidencesResolved" >
-                      <!-- card -->
                       <div  class="card border-resolved" >
-                        <!-- card body -->
                         <div class="card-body p-3">
                           <div class="d-flex justify-content-between">
                             <div>
@@ -303,7 +244,6 @@
                             <div><span class="badge bg-success">{{incidence.priority}}</span></div> 
                           </div>
                           <div class="d-flex justify-content-between align-items-center ps-4 mt-6">
-                            <!-- img -->
                             <div class="d-flex align-items-center">
                             </div>                                  
                           </div>
@@ -321,4 +261,6 @@
       </div>
     </div>
   </div>
+
 </div>
+
