--- a/MyHomeApp/src/main/webapp/app/incidences/status/status-incidence.component.scss
+++ b/MyHomeApp/src/main/webapp/app/incidences/status/status-incidence.component.scss
@@ -52,6 +52,11 @@
 * COLORS
 */
 
+.bg-gray-100 {
+    --bs-bg-opacity: 0.5;
+    background-color: #e8e7ed!important;
+}
+
 .bg-gray-300 {
     --bs-bg-opacity: 1;
     background-color: #e8e7ed!important;
