--- a/MyHomeApp/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/MyHomeApp/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -27,6 +27,14 @@
             </span>
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/map" (click)="collapseNavbar()">
+            <span>
+              <fa-icon icon="map-location-dot"></fa-icon>
+              <span jhiTranslate="global.menu.map">Mapa</span>
+            </span>
+          </a>
+        </li>
         <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
         <li
           *ngSwitchCase="true"
